--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
 				</ul>
 			</nav>
 		</header>
-		<h1>The Band</h1>
+		<div class="content">
+			<h1>The Band</h1>
 
-		<p>
-			Im September 2018 beschließen drei junge Studenten nach einer
-		    gemeinsamen Jamsession zusammen Musik zu machen.
-		    Vier Monate später fliegen bei ihrem ersten Konzert
-		    bereits Schlüpfer durch die Luft.
-		</p>
-		<p>
-		   Lennart Werner (Gitarre, Gesang), Karim Djemai (Bass) und Kian Kiesling (Schlagzeug) richten ihren Blick auf die Gesamtheit der Rockmusik des letzten Jahrhunderts – und bedienen sich wie an einem all you can eat Buffet. Alles, von harmonischem Classic Rock über gefühlvollen Pop bishin zu kreischenden Gitarrensoli und mitreißenden Hardrockrefrains, landet auf ihrem Teller.
-		   Dabei entsteht ein Gericht, dem zwar der Geschmack älterer Rockmusik innewohnt, welches jedoch einzigartig wird, sobald man beginnt es mit der Soßenkelle zu verschlingen.
-		   Falling Moose erzeugen einen ganz eigenen Sound, versetzen ihr Publikum mal in Harmonie und Gelassenheit, mal in gespannte Extase.<br>
-		   Hören kann man Falling Moose derzeit auf Soundcloud, sowie auf ihren Konzerten, von denen einige sogar komplett selbst veranstaltet sind. Weniger als ein Jahr nach Entstehung, im Sommer 2019 gewann die Band zudem den 440hz Music Slam im Gängeviertel.
-		   Derzeit sind drei vor kurzem aufgenommene Singles in Produktion, die die Band eigenständig digital releasen wird. Man darf also gespannt sein.</p>
+			<p>
+				Im September 2018 beschließen drei junge Studenten nach einer
+			    gemeinsamen Jamsession zusammen Musik zu machen.
+			    Vier Monate später fliegen bei ihrem ersten Konzert
+			    bereits Schlüpfer durch die Luft.
+			</p>
+			<p>
+			   Lennart Werner (Gitarre, Gesang), Karim Djemai (Bass) und Kian Kiesling (Schlagzeug) richten ihren Blick auf die Gesamtheit der Rockmusik des letzten Jahrhunderts – und bedienen sich wie an einem all you can eat Buffet. Alles, von harmonischem Classic Rock über gefühlvollen Pop bishin zu kreischenden Gitarrensoli und mitreißenden Hardrockrefrains, landet auf ihrem Teller.
+			   Dabei entsteht ein Gericht, dem zwar der Geschmack älterer Rockmusik innewohnt, welches jedoch einzigartig wird, sobald man beginnt es mit der Soßenkelle zu verschlingen.
+			   Falling Moose erzeugen einen ganz eigenen Sound, versetzen ihr Publikum mal in Harmonie und Gelassenheit, mal in gespannte Extase.<br>
+			   Hören kann man Falling Moose derzeit auf Soundcloud, sowie auf ihren Konzerten, von denen einige sogar komplett selbst veranstaltet sind. Weniger als ein Jahr nach Entstehung, im Sommer 2019 gewann die Band zudem den 440hz Music Slam im Gängeviertel.
+			   Derzeit sind drei vor kurzem aufgenommene Singles in Produktion, die die Band eigenständig digital releasen wird. Man darf also gespannt sein.</p>
+		</div>
 	</body>
 </html>
