Fix Safari transition bug by using scale instead of width for transition and then recalculating all values to scale down, instead up, because safari displays it blurry otherwise

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 				<img
 					class="logo"
 					src="logo.svg"
-					alt="Falling Moose Logo"
-					width="80" />
+					alt="Falling Moose Logo" />
 
 				<ul>
 					<li>
