--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 		<div class="content">
 			<h1>The Band</h1>
 
+			<figure class="band">
+				<img src="images/fabrique-min04.jpg" alt="Falling Moose Bandfoto im Gängeviertel">
+				<figcaption>© Dalladas-Djemai</figcaption>
+			</figure>
+
 			<p>
 				Im September 2018 beschließen drei junge Studenten nach einer
 			    gemeinsamen Jamsession zusammen Musik zu machen.
@@ -50,11 +55,35 @@
 			    bereits Schlüpfer durch die Luft.
 			</p>
 			<p>
-			   Lennart Werner (Gitarre, Gesang), Karim Djemai (Bass) und Kian Kiesling (Schlagzeug) richten ihren Blick auf die Gesamtheit der Rockmusik des letzten Jahrhunderts – und bedienen sich wie an einem all you can eat Buffet. Alles, von harmonischem Classic Rock über gefühlvollen Pop bishin zu kreischenden Gitarrensoli und mitreißenden Hardrockrefrains, landet auf ihrem Teller.
+			   Lennart Werner (Gitarre, Gesang), Karim Djemai (Bass) und Kian Kiesling (Schlagzeug) richten ihren Blick
+			   auf die Gesamtheit der Rockmusik des letzten Jahrhunderts – und bedienen sich wie an einem all you can eat
+			   Buffet. Alles, von harmonischem Classic Rock über gefühlvollen Pop bishin zu kreischenden Gitarrensoli und
+			   mitreißenden Hardrockrefrains, landet auf ihrem Teller.
+			</p>
+			<p>
 			   Dabei entsteht ein Gericht, dem zwar der Geschmack älterer Rockmusik innewohnt, welches jedoch einzigartig wird, sobald man beginnt es mit der Soßenkelle zu verschlingen.
-			   Falling Moose erzeugen einen ganz eigenen Sound, versetzen ihr Publikum mal in Harmonie und Gelassenheit, mal in gespannte Extase.<br>
+			   Falling Moose erzeugen einen ganz eigenen Sound, versetzen ihr Publikum mal in Harmonie und Gelassenheit, mal in gespannte Extase.</p>
+			<p>
 			   Hören kann man Falling Moose derzeit auf Soundcloud, sowie auf ihren Konzerten, von denen einige sogar komplett selbst veranstaltet sind. Weniger als ein Jahr nach Entstehung, im Sommer 2019 gewann die Band zudem den 440hz Music Slam im Gängeviertel.
-			   Derzeit sind drei vor kurzem aufgenommene Singles in Produktion, die die Band eigenständig digital releasen wird. Man darf also gespannt sein.</p>
+			   Derzeit sind drei vor kurzem aufgenommene Singles in Produktion, die die Band eigenständig digital releasen wird. Man darf also gespannt sein.
+			</p>
 		</div>
+		<footer>
+			<ul class="icons">
+				<li>
+					<a href="https://www.instagram.com/fallingmooseofficial/">
+						<svg class="icon" id="instagram-icon" height="80px" viewBox="0 0 64 64"><path d="M46.91,25.816c-0.073-1.597-0.326-2.687-0.697-3.641c-0.383-0.986-0.896-1.823-1.73-2.657c-0.834-0.834-1.67-1.347-2.657-1.73c-0.954-0.371-2.045-0.624-3.641-0.697C36.585,17.017,36.074,17,32,17s-4.585,0.017-6.184,0.09c-1.597,0.073-2.687,0.326-3.641,0.697c-0.986,0.383-1.823,0.896-2.657,1.73c-0.834,0.834-1.347,1.67-1.73,2.657c-0.371,0.954-0.624,2.045-0.697,3.641C17.017,27.415,17,27.926,17,32c0,4.074,0.017,4.585,0.09,6.184c0.073,1.597,0.326,2.687,0.697,3.641c0.383,0.986,0.896,1.823,1.73,2.657c0.834,0.834,1.67,1.347,2.657,1.73c0.954,0.371,2.045,0.624,3.641,0.697C27.415,46.983,27.926,47,32,47s4.585-0.017,6.184-0.09c1.597-0.073,2.687-0.326,3.641-0.697c0.986-0.383,1.823-0.896,2.657-1.73c0.834-0.834,1.347-1.67,1.73-2.657c0.371-0.954,0.624-2.045,0.697-3.641C46.983,36.585,47,36.074,47,32S46.983,27.415,46.91,25.816z M44.21,38.061c-0.067,1.462-0.311,2.257-0.516,2.785c-0.272,0.7-0.597,1.2-1.122,1.725c-0.525,0.525-1.025,0.85-1.725,1.122c-0.529,0.205-1.323,0.45-2.785,0.516c-1.581,0.072-2.056,0.087-6.061,0.087s-4.48-0.015-6.061-0.087c-1.462-0.067-2.257-0.311-2.785-0.516c-0.7-0.272-1.2-0.597-1.725-1.122c-0.525-0.525-0.85-1.025-1.122-1.725c-0.205-0.529-0.45-1.323-0.516-2.785c-0.072-1.582-0.087-2.056-0.087-6.061s0.015-4.48,0.087-6.061c0.067-1.462,0.311-2.257,0.516-2.785c0.272-0.7,0.597-1.2,1.122-1.725c0.525-0.525,1.025-0.85,1.725-1.122c0.529-0.205,1.323-0.45,2.785-0.516c1.582-0.072,2.056-0.087,6.061-0.087s4.48,0.015,6.061,0.087c1.462,0.067,2.257,0.311,2.785,0.516c0.7,0.272,1.2,0.597,1.725,1.122c0.525,0.525,0.85,1.025,1.122,1.725c0.205,0.529,0.45,1.323,0.516,2.785c0.072,1.582,0.087,2.056,0.087,6.061S44.282,36.48,44.21,38.061z M32,24.297c-4.254,0-7.703,3.449-7.703,7.703c0,4.254,3.449,7.703,7.703,7.703c4.254,0,7.703-3.449,7.703-7.703C39.703,27.746,36.254,24.297,32,24.297z M32,37c-2.761,0-5-2.239-5-5c0-2.761,2.239-5,5-5s5,2.239,5,5C37,34.761,34.761,37,32,37z M40.007,22.193c-0.994,0-1.8,0.806-1.8,1.8c0,0.994,0.806,1.8,1.8,1.8c0.994,0,1.8-0.806,1.8-1.8C41.807,22.999,41.001,22.193,40.007,22.193z"></path></svg>
+					</a>
+				</li>
+				<li>
+					<a href="https://soundcloud.com/falling-moose">
+						<svg class="icon" id="soundcloud-icon" height="30px" viewBox="0 208.952 1048.713 581.696"><path d="M0 686.216c0 13.014 4.718 22.854 14.152 29.524 9.435 6.669 19.52 9.027 30.256 7.076 10.085-1.952 17.161-5.531 21.229-10.736 4.066-5.205 6.1-13.827 6.1-25.864v-141.52c0-10.086-3.497-18.626-10.492-25.62-6.994-6.995-15.534-10.492-25.62-10.492-9.76 0-18.137 3.497-25.132 10.492C3.498 526.07 0 534.61 0 544.696v141.52zm112.24 60.512c0 9.436 3.335 16.511 10.004 21.229 6.67 4.718 15.21 7.076 25.62 7.076 10.736 0 19.438-2.359 26.108-7.076 6.669-4.717 10.004-11.793 10.004-21.229V416.84c0-9.76-3.498-18.138-10.492-25.132-6.995-6.994-15.535-10.492-25.62-10.492-9.76 0-18.138 3.498-25.132 10.492-6.995 6.995-10.492 15.372-10.492 25.132v329.888zm111.752 15.616c0 9.435 3.416 16.511 10.248 21.229 6.832 4.717 15.616 7.076 26.353 7.076 10.41 0 18.95-2.359 25.619-7.076 6.67-4.718 10.005-11.794 10.005-21.229V461.248c0-10.085-3.498-18.707-10.492-25.864-6.995-7.157-15.372-10.735-25.132-10.735-10.086 0-18.707 3.578-25.864 10.735s-10.736 15.779-10.736 25.864v301.096zm112.24 1.464c0 17.894 12.037 26.841 36.112 26.841 24.074 0 36.111-8.947 36.111-26.841v-488c0-27.328-8.296-42.781-24.888-46.36-10.736-2.603-21.31.488-31.72 9.272-10.411 8.784-15.616 21.146-15.616 37.088v488zm114.193 14.152V247.016c0-16.917 5.042-27.002 15.128-30.256 21.797-5.205 43.432-7.808 64.904-7.808 49.775 0 96.136 11.712 139.079 35.136 42.944 23.424 77.674 55.388 104.188 95.892 26.515 40.505 41.887 85.156 46.116 133.957 19.845-8.459 40.991-12.688 63.439-12.688 45.547 0 84.506 16.104 116.876 48.312 32.371 32.209 48.557 70.923 48.557 116.145 0 45.547-16.186 84.424-48.557 116.632-32.37 32.208-71.166 48.312-116.388 48.312l-424.56-.488c-2.929-.976-5.125-2.766-6.589-5.368s-2.193-4.882-2.193-6.834z"></path></svg>
+					</a>
+				</li>
+				<!--li>
+					<svg id="spotify-icon" viewBox="0 0 64 64"><path d="M32,16c-8.8,0-16,7.2-16,16c0,8.8,7.2,16,16,16c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16 M39.3,39.1c-0.3,0.5-0.9,0.6-1.4,0.3c-3.8-2.3-8.5-2.8-14.1-1.5c-0.5,0.1-1.1-0.2-1.2-0.7c-0.1-0.5,0.2-1.1,0.8-1.2 c6.1-1.4,11.3-0.8,15.5,1.8C39.5,38,39.6,38.6,39.3,39.1 M41.3,34.7c-0.4,0.6-1.1,0.8-1.7,0.4c-4.3-2.6-10.9-3.4-15.9-1.9 c-0.7,0.2-1.4-0.2-1.6-0.8c-0.2-0.7,0.2-1.4,0.8-1.6c5.8-1.8,13-0.9,18,2.1C41.5,33.4,41.7,34.1,41.3,34.7 M41.5,30.2 c-5.2-3.1-13.7-3.3-18.6-1.9c-0.8,0.2-1.6-0.2-1.9-1c-0.2-0.8,0.2-1.6,1-1.9c5.7-1.7,15-1.4,21,2.1c0.7,0.4,0.9,1.3,0.5,2.1 C43.1,30.4,42.2,30.6,41.5,30.2"></path></svg>
+				</li-->
+			</ul>
+		</footer>
 	</body>
 </html>
